codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__identical_parallel_running_hooks_collapse_to_count_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "hook_live_and_history_snapshot(&chat, \"running\", \"\")"
---
running
live hooks:
● Running 3 PreToolUse hooks: checking command policy
history:
<empty>
