codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for deepseek-v4-pro

  1. Low               Fast responses with lighter reasoning
  2. Medium (default)  Balances speed and reasoning depth
  3. max               Maximum available reasoning
› 4. High (current)    Greater reasoning depth for hard problems

  Press enter to confirm or esc to go back
