codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. deepseek-v4-pro (default)  DeepSeek V4 flagship for complex coding,
                                research, and agentic work.
  2. deepseek-v4-flash          Fast DeepSeek model for quick tasks,
                                summaries, and auto-compaction.

  Press enter to confirm or esc to go back
